create task on server

--- a/server/tasks.json
+++ b/server/tasks.json
@@ -1,41 +1,1 @@
-[
-    {
-        "id": 2,
-        "title": "mata hunden"
-    },
-    {
-        "id": 2,
-        "title": "Test",
-        "description": "test"
-    },
-    {
-        "id": 3,
-        "title": "Test",
-        "description": "test"
-    },
-    {
-        "id": 4,
-        "title": "Test",
-        "description": "test"
-    },
-    {
-        "id": 5,
-        "title": "Test",
-        "description": "test"
-    },
-    {
-        "id": 6,
-        "title": "Test",
-        "description": "test"
-    },
-    {
-        "id": 7,
-        "title": "Test",
-        "description": "test"
-    },
-    {
-        "id": 8,
-        "title": "Test",
-        "description": "test"
-    }
-]
+[{"id":2,"title":"ewqeqwq","description":" eqweqwe","dueDate":"2022-12-01","completed":false},{"id":3,"title":"ewqeqwq","description":" eqweqwe","dueDate":"2022-12-01","completed":false},{"id":4,"title":"ewqeqwq","description":" eqweqwe","dueDate":"2022-12-01","completed":false},{"id":5,"title":"ewqeqwq","description":" eqweqwe","dueDate":"2022-12-01","completed":false},{"id":6,"title":"ewqeqwq","description":" eqweqwedfs","dueDate":"2022-12-01","completed":false},{"id":7,"title":"ewqeqwq","description":" eqweqwedfssdfs","dueDate":"2022-12-01","completed":false},{"id":8,"title":"ewqeqwq","description":" eqweqwedfssdfs","dueDate":"2022-12-01","completed":false},{"id":9,"title":"ewqeqwq","description":" eqweqwedfssdfs","dueDate":"2022-12-01","completed":false}]
