--- a/server/tasks.json
+++ b/server/tasks.json
@@ -1,1 +1,30 @@
-[{"id":2,"title":"Mata frisören","description":"1","dueDate":"2022-12-01","completed":false},{"id":3,"title":"Mata flickvännen","description":"2","dueDate":"2022-12-02","completed":false},{"id":4,"title":"Mata grannen","description":"3","dueDate":"2022-12-03","completed":false},{"id":6,"title":"Mata chefen","description":"4","dueDate":"2022-12-04","completed":false}]
+[
+    {
+        "id": 4,
+        "title": "Mata grannen",
+        "description": "3",
+        "dueDate": "2022-12-03",
+        "completed": false
+    },
+    {
+        "id": 6,
+        "title": "Mata frisören",
+        "description": "2",
+        "dueDate": "2022-12-02",
+        "completed": true
+    },
+    {
+        "id": 7,
+        "title": "Mata frisören",
+        "description": "4",
+        "dueDate": "2022-12-04",
+        "completed": false
+    },
+    {
+        "id": 8,
+        "title": "Mata frisören",
+        "description": "1",
+        "dueDate": "2022-12-01",
+        "completed": true
+    }
+]
